# cif-modder

./: .gitignore  Cargo.toml  README.md
examples/modify_lattice_parameters/: main.rs
src/: arguments.rs  instructions.rs  lib.rs  main.rs  utilities.rs
tests/: BaTiO3.cif  instructions.txt
