[package]
name = "cif_modder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
indoc = "2.0.4"
log = "0.4.21"
rand = "0.8.5"
simple_logger = "4.3.3"
